--- a/main/project_si/magasin/templates/header.html
+++ b/main/project_si/magasin/templates/header.html
@@ -4,22 +4,22 @@
     <ul class="favorite-tabs">
      
    <span class="dropdown">
-        <li id="nav" data-bs-toggle="dropdown" aria-expanded="false">Magasin</li>
+        <li id="nav" data-bs-toggle="dropdown" aria-expanded="false">Gestion</li>
         <ul class="dropdown-menu">
-          <li onclick="window.location.href='/produits'">Produits</li>
-          <li onclick="window.location.href='/clients'">Clients</li>
-          <li onclick="window.location.href='/fournisseurs'">Fournisseurs</li>
           <li onclick="window.location.href='/centres'">Centres</li>
+          <li onclick="window.location.href='/produits'">Produits</li>
           <li onclick="window.location.href='/employes'">Employes</li>
+          <li onclick="window.location.href='/fournisseurs'">Fournisseurs</li>
+          <li onclick="window.location.href='/clients'">Clients</li>
         </ul>
       </span>
 
       <span class="dropdown">
         <li id="nav" data-bs-toggle="dropdown" aria-expanded="false">Achat</li>
         <ul class="dropdown-menu">
-          <li onclick="window.location.href='/'">Nouvel Achat</li>
-          <li onclick="window.location.href='/'">Liste Achats</li>
-          <li onclick="window.location.href='/'">Règlement</li>
+          <li onclick="window.location.href='/achats/ajouter'">Nouvel Achat</li>
+          <li onclick="window.location.href='/achats'">Liste Achats</li>
+          <li onclick="window.location.href='/reglement'">Règlement</li>
         </ul>
       </span>
       
