--- a/main/project_si/magasin/templates/gestion/centres/centres.html
+++ b/main/project_si/magasin/templates/gestion/centres/centres.html
@@ -10,11 +10,11 @@
     
     <script src="{% static 'javascript/bootstrap.bundle.min.js' %}"></script>
 
-    <title>Produits</title>
+    <title>Centres</title>
   </head>
   <body>
     {% include 'header.html' %}
-    <h4 class="display-5 d-inline">Liste des Produits :</h4>
+    <h4 class="display-5 d-inline">Mes Centres :</h4>
 
     {% if messages %}
     <div class="messages">
@@ -29,39 +29,36 @@
       type="text"
       id="myInput"
       onkeyup="SearchBar()"
-      placeholder="Rechercher un Produit ..."
+      placeholder="Rechercher un Centre ..."
     />
     <table class="table trecherche">
       <thead>
-        <th>Code Produit</th>
-        <th>Nom Produit</th>
-        <th>Prix</th>
+        <th>Code Centre</th>
+        <th>Nom Centre</th>
         <th class="hid">Actions</th>
         <th class="hid"></th>
       </thead>
-      {% for produit in produits %}
+      {% for centre in centres %}
       <tbody>
         <tr data-aos="fade-right" data-aos-anchor-placement="bottom-bottom">
-          <td>{{produit.code_produit}}</td>
-          <td>{{produit.designation_produit}}</td>
-          <td>{{produit.prix_achat_unitaire_HT}}</td>
+          <td>{{centre.code_centre}}</td>
+          <td>{{centre.designation_centre}}</td>
           <td class="hid">
-            <a class="btn btn-secondary" href="{% url 'modifierP' produit.code_produit %}">
+            <a class="btn btn-secondary" href="{% url 'modifierCt' centre.code_centre %}">
               Modifier
             </a>
-            <a class="btn btn-danger" href="{% url 'supprimerP' produit.code_produit %}">
+            <a class="btn btn-danger" href="{% url 'supprimerCt' centre.code_centre %}">
               Supprimer
             </a>
           </td>
           
         </tr>
-        {% endfor%}  
-       
+        {% endfor%}
       </tbody> 
-
     </table>
     <div style="display: flex;flex-direction: column;align-items: flex-end;">
-    <a style="float: right;margin-right: 25px; width: 18%; margin-bottom: 20px;" class="btn btn-primary " href="{% url 'ajouterP' %}">Ajouter un nouveau Produit</a> 
+    <a style="float: right;margin-right: 25px; width: 18%; margin-bottom: 20px;" class="btn btn-primary " href="{% url 'ajouterCt' %}">Ajouter un nouveau Centre</a> 
+    <button style="background-color: purple;float: right;margin-right: 25px; width: 18%;margin-bottom: 20px;" id="print-button" class="btn btn-primary" >Imprimer</button>
     </div>
   </body>
   <script src="{% static 'javascript/script.js' %}"></script>
