--- a/main/project_si/magasin/templates/achat/achats.html
+++ b/main/project_si/magasin/templates/achat/achats.html
@@ -35,13 +35,19 @@
         <tr data-aos="fade-right" data-aos-anchor-placement="bottom-bottom">
           <td>{{a.numero_achat}}</td>
           <td>{{a.fournisseur}}</td>
-          <td>{{a.montant_total_HT|floatformat:2}}</td>
+          <td>{{a.montant_total_HT|floatformat:2}} DA</td>
           <td>{{a.date_achat}}</td>
           <td class="hid">
             <a class="btn btn-danger" href="{% url 'supprimerA' a.numero_achat %}">Delete</a>
           </td>
         </tr>
-        {% endfor%}  
+        {% endfor%} 
+        <tr> 
+            <td colspan="1"></td>
+            <td>Total :</td>
+            <td>{{ montant_total_global|floatformat:2 }} DA</td>
+            <td class="hid"></td>
+        </tr>
       </tbody> 
     </table>
     <div style="display: flex;flex-direction: column;align-items: flex-end;">
