--- a/main/project_si/magasin/templates/header.html
+++ b/main/project_si/magasin/templates/header.html
@@ -22,14 +22,6 @@
           <li onclick="window.location.href='/reglement'">Règlement</li>
         </ul>
       </span>
-      
-      <span class="dropdown">
-        <li id="nav" data-bs-toggle="dropdown" aria-expanded="false">Transfert</li>
-        <ul class="dropdown-menu">
-          <li onclick="window.location.href='/'">Nouveau Transfert</li>
-          <li onclick="window.location.href='/'">Liste Transferts</li>
-        </ul>
-      </span>
 
       <span class="dropdown">
         <li id="nav" data-bs-toggle="dropdown" aria-expanded="false">Vente</li>
@@ -39,8 +31,16 @@
           <li onclick="window.location.href='/'">Paiement Crédit</li>
         </ul>
       </span>
+      
+      <span class="dropdown">
+        <li id="nav" data-bs-toggle="dropdown" aria-expanded="false">Transfert</li>
+        <ul class="dropdown-menu">
+          <li onclick="window.location.href='/'">Nouveau Transfert</li>
+          <li onclick="window.location.href='/'">Liste Transferts</li>
+        </ul>
+      </span>
 
-      <li id="nav" onclick="window.location.href='/'">Stock</li>
+      <li id="nav" onclick="window.location.href='/stock'">Stock</li>
 
     </ul>
   </nav>
