--- a/main/project_si/magasin/templates/header.html
+++ b/main/project_si/magasin/templates/header.html
@@ -26,9 +26,9 @@
       <span class="dropdown">
         <li id="nav" data-bs-toggle="dropdown" aria-expanded="false">Vente</li>
         <ul class="dropdown-menu">
-          <li onclick="window.location.href='/'">Nouvelle Vente</li>
-          <li onclick="window.location.href='/'">Liste Ventes</li>
-          <li onclick="window.location.href='/'">Paiement Crédit</li>
+          <li onclick="window.location.href='/ventes/ajouter'">Nouvelle Vente</li>
+          <li onclick="window.location.href='/ventes'">Liste Ventes</li>
+          <li onclick="window.location.href='/credits'">Paiement Crédit</li>
         </ul>
       </span>
       
