--- a/main/project_si/magasin/templates/achat/achats.html
+++ b/main/project_si/magasin/templates/achat/achats.html
@@ -52,7 +52,7 @@
     </table>
     <div style="display: flex;flex-direction: column;align-items: flex-end;">
     <a style="float: right;margin-right: 25px; width: 18%; margin-bottom: 20px;" class="btn btn-primary " href="{% url 'ajouterA' %}">Ajouter un nouvel Achat</a>
-    <button style="background-color: purple;float: right;margin-right: 25px; width: 18%;margin-bottom: 20px;" id="print-button" class="btn btn-primary" >Imprimer</button>
+    <button style="background-color: purple;float: right;margin-right: 25px; width: 18%;margin-bottom: 20px;" onclick="printPage()" id="print-button" class="btn btn-primary" >Imprimer</button>
     </div>
   </body>
 </html>
