--- a/main/project_si/magasin/templates/gestion/employes/employes.html
+++ b/main/project_si/magasin/templates/gestion/employes/employes.html
@@ -64,7 +64,7 @@
     </table>
     <div style="display: flex;flex-direction: column;align-items: flex-end;">
     <a style="float: right;margin-right: 25px; width: 18%; margin-bottom: 20px;" class="btn btn-primary " href="{% url 'ajouterE' %}">Ajouter un nouveau Employe</a> 
-    <button style="background-color: purple;float: right;margin-right: 25px; width: 18%;margin-bottom: 20px;" id="print-button" class="btn btn-primary" >Imprimer</button>
+    <button onclick="printPage()" style="background-color: purple;float: right;margin-right: 25px; width: 18%;margin-bottom: 20px;" id="print-button" class="btn btn-primary" >Imprimer</button>
     </div>
   </body>
   <script src="{% static 'javascript/script.js' %}"></script>
