--- a/main/project_si/magasin/templates/vente/ventes.html
+++ b/main/project_si/magasin/templates/vente/ventes.html
@@ -52,7 +52,7 @@
         </tr>
       </tbody> 
     </table>
-    <h3 class="display-5 d-inline">Bénéfice des Ventes : <strong>{{benefice}}</strong> DA </h3>
+    <h3 class="display-5 d-inline">Bénéfice des ventes du Magasin : <strong>{{benefice}}</strong> DA </h3>
     <div style="display: flex;flex-direction: column;align-items: flex-end;">
     <a style="float: right;margin-right: 25px; width: 18%; margin-bottom: 20px;" class="btn btn-primary " href="{% url 'ajouterV' %}">Ajouter une nouvelle Vente</a>
     <button style="background-color: purple;float: right;margin-right: 25px; width: 18%;margin-bottom: 20px;" id="print-button" class="btn btn-primary" >Imprimer</button>
